--- a/package.json
+++ b/package.json
@@ -13,37 +13,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.1",
-    "@angular/common": "~9.0.1",
-    "@angular/compiler": "~9.0.1",
-    "@angular/core": "~9.0.1",
-    "@angular/forms": "~9.0.1",
-    "@angular/platform-browser": "~9.0.1",
-    "@angular/platform-browser-dynamic": "~9.0.1",
-    "@angular/router": "~9.0.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.4.7",
+    "@angular/cli": "7.2.0",
+    "@angular/common": "7.2.0",
+    "@angular/compiler": "7.2.0",
+    "@angular/compiler-cli": "7.2.0",
+    "@angular/core": "7.2.0",
+    "@angular/forms": "7.2.0",
+    "@angular/http": "7.2.0",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "7.2.0",
+    "@angular/platform-browser-dynamic": "7.2.0",
+    "@angular/router": "7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "4.1.0",
+    "angular-webstorage-service": "^1.0.2",
+    "bootstrap": "^3.3.7",
+    "core-js": "2.4.1",
+    "express": "^4.17.1",
+    "jquery": "3.2.1",
+    "jw-bootstrap-switch-ng2": "2.0.1",
+    "ng2-nouislider": "1.7.12",
+    "ng2-tooltip-directive": "^2.1.9",
+    "ngx-toastr": "^10.2.0",
+    "ngx-ui-loader": "^7.2.2",
+    "ngx-webstorage-service": "^4.1.0",
+    "nouislider": "9.2.0",
+    "npm": "^6.13.4",
+    "popper.js": "1.14.4",
+    "rxjs": "6.2.2",
+    "rxjs-compat": "6.2.2",
+    "typescript": "3.2.2",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.2",
-    "@angular/cli": "~9.0.2",
-    "@angular/compiler-cli": "~9.0.1",
-    "@angular/language-service": "~9.0.1",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "@angular-devkit/build-angular": "0.7.0",
+    "@angular/cli": "7.2.0",
+    "@angular/compiler-cli": "7.2.0",
+    "@angular/language-service": "7.2.0",
+    "@types/jasmine": "2.5.45",
+    "@types/node": "6.0.60",
+    "codelyzer": "4.4.3",
+    "jasmine-core": "2.6.2",
+    "jasmine-spec-reporter": "4.1.0",
+    "karma": "3.0.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.2.1",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "protractor": "5.4.0",
+    "ts-node": "3.0.4",
+    "tslint": "5.3.2",
+    "typescript": "3.2.2"
+  },
+  "engines": {
+    "node": "8.11.3",
+    "npm": "5.6.0"
   }
 }
