--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "ts-node": "3.0.4",
     "tslint": "5.3.2",
     "typescript": "3.2.2",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack": "4.24.0"
   },
   "engines": {
     "node": "8.11.3",
