--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "@angular/router": "7.2.0",
     "@ng-bootstrap/ng-bootstrap": "4.1.0",
     "angular-webstorage-service": "^1.0.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "core-js": "2.4.1",
     "express": "^4.17.1",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
     "ng2-tooltip-directive": "^2.1.9",
+    "ngx-bootstrap": "^5.3.2",
     "ngx-toastr": "^10.2.0",
     "ngx-ui-loader": "^7.2.2",
     "ngx-webstorage-service": "^4.1.0",
