--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "bootstrap": "^3.4.1",
     "core-js": "2.4.1",
     "express": "^4.17.1",
-    "jquery": "3.2.1",
+    "jquery": "^3.4.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
     "ng2-tooltip-directive": "^2.1.9",
@@ -40,7 +40,7 @@
     "ngx-ui-loader": "^7.2.2",
     "ngx-webstorage-service": "^4.1.0",
     "nouislider": "9.2.0",
-    "npm": "^6.13.4",
+    "npm": "^6.14.3",
     "popper.js": "1.14.4",
     "rxjs": "6.2.2",
     "rxjs-compat": "6.2.2",
@@ -48,7 +48,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.7.0",
+    "@angular-devkit/build-angular": "^0.7.0",
     "@angular/cli": "7.2.0",
     "@angular/compiler-cli": "7.2.0",
     "@angular/language-service": "7.2.0",
@@ -67,7 +67,7 @@
     "ts-node": "3.0.4",
     "tslint": "5.3.2",
     "typescript": "3.2.2",
-    "webpack": "4.24.0"
+    "webpack": "^4.42.0"
   },
   "engines": {
     "node": "8.11.3",
